--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "morgan": "~1.0.0",
     "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
+    "express-session":"*",
     "debug": "~0.7.4",
     "jade": "~1.3.0",
     "mongodb": "*",
